@@ -46,6 +46,7 @@
 #include <boost/filesystem/operations.hpp>
 #include <boost/filesystem/path.hpp>
 #include <boost/filesystem/fstream.hpp>
+#include <boost/filesystem/convenience.hpp>
 
 #include <boost/function.hpp>
 #include <boost/bind.hpp>
